<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
      android:paddingLeft="@dimen/component_user_dp_10"
      android:paddingRight="@dimen/component_user_dp_10"
              android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/component_user_dp_10"
        android:layout_marginTop="@dimen/basic_d40"
        android:layout_marginBottom="@dimen/component_user_dp_40"
        android:textSize="@dimen/basic_s18"
        android:text="注册" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone"
        app:errorEnabled="false"
        android:padding="@dimen/component_user_dp_10"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_phone"
            android:textSize="@dimen/basic_s14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_auth_code"
        android:padding="@dimen/component_user_dp_10"
        app:errorEnabled="false"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_auth_code"
            android:layout_width="match_parent"
            android:textSize="@dimen/basic_s14"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint_auth_code"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nick"
        android:padding="@dimen/component_user_dp_10"
        app:errorEnabled="false"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_nick"
            android:textSize="@dimen/basic_s14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint_nick"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:padding="@dimen/component_user_dp_10"
        app:errorEnabled="false"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_password"
            android:textSize="@dimen/basic_s14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint_input_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_re_password"
        android:padding="@dimen/component_user_dp_10"
        app:errorEnabled="false"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/basic_s14"
            android:hint="@string/user_hint_input_password_again"/>

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/btn_login"
        android:gravity="center"
        android:layout_marginTop="@dimen/component_user_dp_20"
        android:layout_marginLeft="@dimen/component_user_dp_10"
        android:layout_marginRight="@dimen/component_user_dp_10"
        android:layout_width="match_parent"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/white"
        android:layout_height="@dimen/basic_d40"
        android:text="@string/title_btn_login"
        android:textSize="@dimen/basic_s18" />

</LinearLayout>