<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
      android:paddingLeft="@dimen/component_user_dp_10"
      android:paddingRight="@dimen/component_user_dp_10"
              android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/component_user_dp_10"

        android:layout_marginTop="@dimen/basic_d80"
        android:layout_marginBottom="@dimen/component_user_dp_40"
        android:textSize="@dimen/basic_s18"
        android:text="登录" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone"
        android:padding="@dimen/component_user_dp_10"
        app:errorEnabled="false"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_phone"
            android:textSize="@dimen/basic_s14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_password"/>

    </android.support.design.widget.TextInputLayout>






    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_marginTop="@dimen/component_user_dp_10"
        android:padding="@dimen/component_user_dp_10"
        app:errorEnabled="false"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_password"
            android:textSize="@dimen/basic_s14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint_input_password"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/btn_login"
        android:gravity="center"
        android:layout_marginTop="@dimen/component_user_dp_20"
        android:layout_marginLeft="@dimen/component_user_dp_10"
        android:layout_marginRight="@dimen/component_user_dp_10"
        android:layout_width="match_parent"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/white"
        android:layout_height="@dimen/basic_d40"
        android:text="@string/title_btn_login"
        android:textSize="@dimen/basic_s18" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_login_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/component_user_dp_10"
            android:padding="@dimen/basic_d5"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/title_btn_login_config"
            android:textColor="@color/basic_gray1"
            android:textSize="@dimen/basic_s14" />

        <TextView
            android:id="@+id/tv_forget_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/component_user_dp_10"
            android:padding="@dimen/basic_d5"
            android:background="?android:attr/selectableItemBackground"
            android:text="忘记密码"
            android:textColor="@color/basic_gray1"
            android:textSize="@dimen/basic_s14" />
    </RelativeLayout>

</LinearLayout>